[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ftl2-enterprise"
version = "0.1.0"
description = "Database-backed multi-loop reconciler for FTL2"
license = "Apache-2.0"
requires-python = ">=3.13"
authors = [{ name = "Ben" }]
dependencies = [
    "ftl2 @ git+https://github.com/benthomasson/ftl2",
    "ftl2-ai-loop @ git+https://github.com/benthomasson/ftl2-ai-loop",
    "sqlalchemy>=2.0.0",
    "textual>=0.50.0",
]

[project.scripts]
ftl2-enterprise = "ftl2_enterprise:cli"

[tool.hatch.build.targets.wheel]
packages = ["ftl2_enterprise"]

[tool.hatch.metadata]
allow-direct-references = true
